cloudinary host added to the proyect
