# src/Controller/post/post.controller.ts
@@ -11,9 +11,10 @@ import { inputValidator } from '../../utils/inputValidator';
 import { paginationHelper } from '../../utils/pagination.helper';
 import { parseError } from '../../utils/parseError';
 import { IInputValidator } from '../../utils/types';
-import { IPostController } from './post.controller.interface';
 import { NextFunction, Response } from 'express';
 import { v4 as uuidv4 } from 'uuid';
+import { IPostController } from './post.controller.interface';
+// import fs from 'fs';
 
 export class PostController implements IPostController {
   private _postService: PostService = new PostService();
@@ -33,7 +34,7 @@ export class PostController implements IPostController {
       const offset = newpage * newLimit;
       const result: IDataPaginator<IPost> = await this._postService.getFeed(
         offset,
-        newLimit,
+        newLimit
       );
       const postsPromises: Promise<PostDTO>[] =
         result.data?.map(async (a) => await new PostDTO(a).build()) || [];
@@ -51,36 +52,33 @@ export class PostController implements IPostController {
   }
 
   public async getAllByUserUuid(
-      req: IRequestExtendedUser | any,
-      res: Response,
-      next: NextFunction
-    ): Promise<void> {
-      try {
-        const { userUuid } = req.params;
-        const { page, limit } = paginationHelper(req);
-        const newpage: number = page;
-        let newLimit: number = limit;
-        newLimit = newLimit === 0 ? 20 : newLimit;
-        const offset = newpage * newLimit;
-        const result: IDataPaginator<IPost> = await this._postService.getAllByUserUuid(
-          userUuid,
-          offset,
-          newLimit,
-        );
-        const postsPromises: Promise<PostDTO>[] =
-          result.data?.map(async (a) => await new PostDTO(a).build()) || [];
-        const postsDTO: PostDTO[] = await Promise.all(postsPromises);
-        res.json({ ...result, ...{ data: postsDTO } });
-      } catch (err: any) {
-        if (err instanceof SqlValidatorError) {
-          req.statusCode = err.statusCode;
-          next(err);
-        } else {
-          console.error(err.message, err.stack);
-          next(new Error('Error getting Feed'));
-        }
+    req: IRequestExtendedUser | any,
+    res: Response,
+    next: NextFunction
+  ): Promise<void> {
+    try {
+      const { userUuid } = req.params;
+      const { page, limit } = paginationHelper(req);
+      const newpage: number = page;
+      let newLimit: number = limit;
+      newLimit = newLimit === 0 ? 20 : newLimit;
+      const offset = newpage * newLimit;
+      const result: IDataPaginator<IPost> =
+        await this._postService.getAllByUserUuid(userUuid, offset, newLimit);
+      const postsPromises: Promise<PostDTO>[] =
+        result.data?.map(async (a) => await new PostDTO(a).build()) || [];
+      const postsDTO: PostDTO[] = await Promise.all(postsPromises);
+      res.json({ ...result, ...{ data: postsDTO } });
+    } catch (err: any) {
+      if (err instanceof SqlValidatorError) {
+        req.statusCode = err.statusCode;
+        next(err);
+      } else {
+        console.error(err.message, err.stack);
+        next(new Error('Error getting Feed'));
       }
     }
+  }
 
   public async getByUuid(
     req: IRequestExtendedUser | any,
@@ -113,12 +111,49 @@ export class PostController implements IPostController {
     res: Response,
     next: NextFunction
   ): Promise<void> {
+    const { multimediaFiletype, multimediaFile } = req.body;
+    const locationData = await JSON.parse(req.body?.location);
+    let multimediaUrl = '';
+
+    switch (multimediaFiletype) {
+      case 'URL':
+        multimediaUrl = multimediaFile;
+        break;
+      case 'BASE64':
+        // const base64Data = multimediaFile.replace(
+        //   /^data:image\/\w+;base64,/,
+        //   ''
+        // );
+        // const buffer = Buffer.from(base64Data, 'base64');
+        // fs.writeFile('image.png', buffer, (err) => {
+        //   if (err) {
+        //     console.error(err);
+        //     return res.status(500).send('Error al guardar la imagen');
+        //   }
+        // });
+        multimediaUrl =
+          await this._postService.uploadImageBase64(multimediaFile);
+        break;
+      default:
+        return next(await parseError('multimediaFiletype not supported', 500));
+    }
+
+    // Puedes guardarla en el sistema de archivos o manejarla según sea necesario
+
     const postInputDTO: PostInputDTO = new PostInputDTO({
       postUuid: uuidv4(),
       userUuid: req.user.userUuid,
+      latitude: locationData.latitud,
+      longitude: locationData.latitud,
+      mapsUrl: locationData.mapsUrl,
+      multimediaUrl,
       ...req.body,
     }).build();
 
+    const validation: IInputValidator = await inputValidator(postInputDTO);
+    if (!validation.success) {
+      return next(await parseError(validation.message, 400));
+    }
     const post: IPost | null = await this._postService.create(postInputDTO);
     const postDTO: PostDTO = await new PostDTO(post).build();
     res.json({
@@ -134,20 +169,17 @@ export class PostController implements IPostController {
   ): Promise<void> {
     try {
       const { postUuid } = req.params;
-      const postUpdateInputDTO: PostUpdateDTO =
-        new PostUpdateDTO({
-          ...req.body,
-        }).build();
-      const validation: IInputValidator = await inputValidator(
-        postUpdateInputDTO
-      );
+      const postUpdateInputDTO: PostUpdateDTO = new PostUpdateDTO({
+        ...req.body,
+      }).build();
+      const validation: IInputValidator =
+        await inputValidator(postUpdateInputDTO);
       if (!validation.success) {
         return next(await parseError(validation.message, 400));
       }
       Object.assign(postUpdateInputDTO, { postUuid });
-      const post: IPost | null = await this._postService.update(
-        postUpdateInputDTO
-      );
+      const post: IPost | null =
+        await this._postService.update(postUpdateInputDTO);
       if (!post) {
         return next(await parseError('Post not found', 404));
       }
@@ -202,7 +234,7 @@ export class PostController implements IPostController {
     try {
       res.status(200).json({
         success: true,
-        message: 'Not implemented yet'
+        message: 'Not implemented yet',
       });
     } catch (error: any) {
       next(error);
@@ -217,7 +249,7 @@ export class PostController implements IPostController {
     try {
       res.status(200).json({
         success: true,
-        message: 'Not implemented yet'
+        message: 'Not implemented yet',
       });
     } catch (error: any) {
       next(error);
